# Learning

./: build.gradle  screenMatch.properties  settings.gradle
AndroidBase/: build.gradle
AndroidBase/src/main/: AndroidManifest.xml
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: popwin_enter.xml  popwin_out.xml
app/src/main/res/layout/: activity_async_task.xml  activity_camera.xml  activity_future.xml  activity_keyboard.xml  activity_main.xml  activity_main2.xml  activity_opengl_activity.xml  activity_start_remote_assistance.xml
app/src/main/res/values/: strings.xml  styles.xml
avdemo/: build.gradle
avdemo/src/main/: AndroidManifest.xml
avdemo/src/main/res/layout/: activity_audio.xml  activity_main.xml
avdemo/src/main/res/values/: strings.xml
camera/: build.gradle
commonLib/: .gitignore  build.gradle
commonLib/src/main/: AndroidManifest.xml
commonLib/src/main/res/drawable/: bg_keyboard.xml  keyboard_item_selector.xml
commonLib/src/main/res/layout/: keyboard.xml
commonLib/src/main/res/values-sw1024dp/: dimens.xml
commonLib/src/main/res/values-sw1280dp/: dimens.xml
commonLib/src/main/res/values-sw1365dp/: dimens.xml
commonLib/src/main/res/values-sw240dp/: dimens.xml
commonLib/src/main/res/values-sw320dp/: dimens.xml
commonLib/src/main/res/values-sw360dp/: dimens.xml
commonLib/src/main/res/values-sw384dp/: dimens.xml
commonLib/src/main/res/values-sw392dp/: dimens.xml
commonLib/src/main/res/values-sw400dp/: dimens.xml
commonLib/src/main/res/values-sw410dp/: dimens.xml
gradle/wrapper/: gradle-wrapper.properties
jetpack/: build.gradle
jetpack/src/main/: AndroidManifest.xml
leetcode/: build.gradle
libLame/: .gitignore  build.gradle
libLame/src/main/: AndroidManifest.xml
libLame/src/main/cpp/: CMakeLists.txt  LameJni.cpp
libyuv/: build.gradle
libyuv/src/main/: AndroidManifest.xml
libyuv/src/main/cpp/: CMakeLists.txt  YuvJni.cpp
third_party_sourceCode/Okhttp/: build.gradle
third_party_sourceCode/Okhttp/src/main/: AndroidManifest.xml
third_party_sourceCode/RxJava/: build.gradle
third_party_sourceCode/RxJava/src/main/: AndroidManifest.xml
(+163 files in other folders)
